[workspace]
members = [
    "maden-config",
    "maden-core",
    "maden-macros",
    "maden-log",
]

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.9.0"
serde_json = "1.0"
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
inventory = "0.3"
httparse = "1"
http-body-util = "0.1.3"
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }     
tokio-util = { version = "0.7", features = ["full"] }
tokio-rustls = "0.26.0" 
rustls = "0.23.9" 
rustls-pemfile = "2"   
heck = "0.5.0"     
log = "0.4" 
env_logger = "0.11"

[package]
name = "maden"
version = "0.1.0"
edition = "2024"

[dependencies]
maden-core = { path = "./maden-core" }
maden-config = { path = "./maden-config" }
maden-macros = { path = "./maden-macros" }
maden-log = { path = "./maden-log" }  
tokio = { workspace = true }
inventory = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true, features = ["derive"] }
hyper = { workspace = true }
