[package]
name = "maden-core"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { workspace = true }
maden-config = { path = "../maden-config" }
maden-macros = { path = "../maden-macros" }
inventory = { workspace = true }
httparse = { workspace = true }
hyper = { workspace = true }
tokio-util = { workspace = true }
hyper-util = { workspace = true }
tokio-rustls = { workspace = true }
rustls = { workspace = true }
rustls-pemfile = { workspace = true }
log = { workspace = true }
maden-log = { path = "../maden-log" }
http-body-util = { workspace = true }
serde = { workspace = true }
serde_json = "1.0"